--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "g": "^2.0.1",
+    "index": "^0.4.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.43",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
+    "node": "^21.1.0",
     "punycode": "^2.3.1"
   },
   "devDependencies": {
     "chai": "^4.3.10",
     "chai-http": "^4.4.0",
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.1"
   }
 }
