--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "bcrypt": "^5.1.1",
+    "clean": "^4.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "g": "^2.0.1",
